--- a/projects/experimental/components/chip/chip.style.less
+++ b/projects/experimental/components/chip/chip.style.less
@@ -2,13 +2,14 @@
 
 tui-chip,
 [tuiChip] {
-    .chip();
-    gap: 0.125rem;
-    text-indent: 0.125rem;
+    .button-base();
+    font: var(--tui-font-text-s);
     border-radius: var(--tui-radius-m);
     padding: var(--t-padding);
     height: var(--t-size);
 
+    --t-gap: 0.125rem;
+    --t-margin: -0.125rem;
     --t-icon-size: 1rem;
 
     .interactive({
@@ -24,73 +25,58 @@ tui-chip,
     &[data-size='xxs'] {
         font: var(--tui-font-text-xs);
         border-radius: var(--tui-radius-xs);
-        gap: 0;
 
-        --t-padding: 0 0.25rem 0 0.125rem;
+        --t-gap: 0rem;
+        --t-padding: 0 0.25rem;
         --t-size: 1rem;
         --t-icon-size: 0.75rem;
 
-        &:after {
-            transform: translateX(0.125rem);
-        }
-
         & > [tuiIconButton] {
-            transform: translateX(0.125rem) scale(0.75);
+            margin: -0.5rem;
+            transform: scale(0.75);
         }
     }
 
     &[data-size='xs'] {
         border-radius: var(--tui-radius-xs);
 
-        --t-padding: 0 0.375rem 0 0.25rem;
+        --t-padding: 0 0.375rem;
         --t-size: 1.25rem;
 
-        &:after,
         & > [tuiIconButton] {
-            transform: translateX(0.125rem);
+            margin: -0.375rem;
         }
     }
 
     &[data-size='s'] {
-        --t-padding: 0 0.625rem 0 0.5rem;
+        --t-padding: 0 0.625rem;
         --t-size: var(--tui-height-s);
 
-        &:after,
         & > [tuiIconButton] {
-            transform: translateX(0.125rem);
+            margin: -0.375rem;
         }
 
         & > img,
         tui-avatar {
-            margin-inline-start: -0.25rem;
+            margin-inline-start: -0.375rem;
         }
     }
 
     &[data-size='m'] {
         font: var(--tui-font-text-m);
-        text-indent: 0.375rem;
 
+        --t-margin: -0.375rem;
         --t-icon-size: 1.5rem;
-        --t-padding: 0 1rem 0 0.625rem;
+        --t-padding: 0 1rem;
         --t-size: var(--tui-height-m);
 
-        &:after,
         & > [tuiIconButton] {
-            transform: translateX(0.25rem);
+            margin: -0.75rem;
         }
     }
 
     & > img {
         width: 1.5rem;
-    }
-
-    & > [tuiIconButton] {
-        margin: -0.25rem;
-    }
-
-    &[data-size='m'] > [tuiIconButton],
-    &[data-size='xxs'] > [tuiIconButton] {
-        margin: -0.375rem;
     }
 
     & > input[tuiChip] {
