--- a/projects/experimental/directives/button-vertical/button-vertical.style.less
+++ b/projects/experimental/directives/button-vertical/button-vertical.style.less
@@ -6,11 +6,11 @@
     padding: 0.75rem;
     gap: 0.375rem;
     min-width: 5rem;
-    text-indent: unset;
-    white-space: pre-wrap;
+    white-space: pre-line;
     font: var(--tui-font-text-s-2);
 
     --t-line-height: 1rem;
+    --t-margin: 0rem !important;
 
     & > * {
         max-height: calc(var(--t-line-height) * 2);
